--- a/package.json
+++ b/package.json
@@ -13,12 +13,12 @@
     "@react-navigation/bottom-tabs": "^6.5.19",
     "@react-navigation/native": "^6.1.16",
     "expo": "~50.0.11",
+    "expo-location": "~16.5.5",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-native": "0.73.4",
     "react-native-safe-area-context": "4.8.2",
-    "react-native-screens": "~3.29.0",
-    "expo-location": "~16.5.5"
+    "react-native-screens": "~3.29.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -27,7 +27,8 @@
     "eslint": "^8.57.0",
     "eslint-plugin-react": "^7.34.0",
     "eslint-plugin-react-native": "^4.1.0",
-    "prettier": "3.2.5"
+    "prettier": "3.2.5",
+    "react-native-dotenv": "^3.4.11"
   },
   "private": true
 }
